vertical align fix

--- a/css/main.css
+++ b/css/main.css
@@ -97,9 +97,10 @@ h1 {
 }
 .conj-wrap-row .entry {
     clear: both;
-    margin: 14px 0;
+    margin: 6px 0;
     font-size: 16px;
     overflow: hidden;
+    height: 30px;
 }
 
 .conj-wrap-row .entry .en {
